<resources>
    <string name="google_app_id">192108019967</string>
    <string name="app_name">SFA</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_outlet_list">Outlet List</string>
    <string name="nav_item_order_history">Today\'s Orders</string>
    <string name="nav_item_delivery_list">Delivery List</string>
    <string name="nav_item_discount_list">Discounts</string>
    <string name="nav_item_schemes_list">Schemes</string>
    <string name="nav_item_outlet_registration">Outlet Registration</string>
    <string name="nav_item_planogram">Planogram</string>
    <string name="nav_item_check_asset">Check Asset</string>
    <string name="nav_item_new_outlet_list">New Outlet List</string>
    <string name="nav_item_asset_info">Asset Info</string>
    <string name="nav_item_day_summary">Day Summary</string>
    <string name="nav_item_psr_day_summary">PSR Day Summary</string>
    <string name="nav_item_stock_upload">Stock upload</string>
    <string name="nav_item_technician">Technician</string>
    <string name="nohistory">No History Available</string>
    <string-array name="nav_drawer_labels">

        <item>@string/nav_item_home</item>
        <item>@string/nav_item_outlet_list</item>
        <item>@string/nav_item_delivery_list</item>
        <item>@string/nav_item_order_history</item>
        <item>@string/nav_item_schemes_list</item>
        <item>@string/nav_item_outlet_registration</item>

    </string-array>
    <string name="title_home">Home</string>
    <string name="title_outlet_list">Outlet List</string>
    <string name="title_order_history">Today\'s Orders</string>
    <string name="title_delivery_list">Delivery List</string>
    <string name="title_sku_list">SKU List</string>
    <string name="title_discount_list">Discounts</string>
    <string name="title_scheme_list">Schemes</string>
    <string name="title_outlet_registration">Outlet Registration</string>
    <string name="title_complaint_registration">Complaint Registration</string>
    <string name="title_book_order">Order Booking</string>
    <string name="title_dashboard"></string>
    <string name="title_order_summary">Order Summary</string>
    <string name="title_about">About</string>
    <string name="title_asset_complaint">Asset Complaint</string>
    <string name="title_asset_audit">Audit Form</string>
    <string name="title_planogram">Planogram</string>
    <string name="title_check_asset">Check Asset</string>
    <string name="title_pullout_form">Asset Pullout</string>
    <string name="title_asset_request">Asset Request</string>
    <string name="title_new_outlet_list">New Outlet List</string>
    <string name="title_asset_info">Asset Info</string>
    <string name="title_day_summary">Day Summary</string>
    <string name="title_customer_returns">Customer Returns</string>
    <string name="title_psr_day_summary">Day Summary</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="ic_action_brand_spinner">Brand List</string>
    <string name="ic_action_pack_spinner">Pack List</string>
    <string name="ic_action_lang_spinner">Languages</string>
    <string name="splash_txt_powered_by">Powered By</string>
    <string name="splash_txt_inventrax_site">www.inventrax.com</string>
    <string name="hint_user_id">User Id</string>
    <string name="hint_password">Password</string>
    <string name="err_msg_user_id">Please enter a valid user id</string>
    <string name="err_msg_password">Please enter a valid password</string>
    <string name="login_chk_remember_password">Remember Password</string>
    <string name="login_sign_in_button_text">Login</string>
    <string name="outlet_list_recycler_empty_view">No Outlet Is Available</string>
    <string name="filter_array_book_order">Book Order</string>
    <string name="filter_array_order_history">Order History</string>
    <string name="filter_array_delivery_list">Delivery List</string>
    <string-array name="outlet_order_filter_array">
        <item>@string/filter_array_book_order</item>
        <item>@string/filter_array_order_history</item>
        <item>@string/filter_array_delivery_list</item>
    </string-array>
    <string name="order_history_list_recycler_empty_view">No Order Is Available</string>
    <string name="delivery_list_recycler_empty_view">No Delivery Is Available</string>
    <string-array name="array_bank_list">
        <item>Select Bank</item>
        <item>State Bank of India</item>
        <item>State Bank of Patiala</item>
        <item>State Bank of Mysore</item>
        <item>State Bank of Travancore</item>
        <item>State Bank of Bikaner and Jaipur</item>
        <item>State Bank of Hyderabad</item>
        <item>Allahabad Bank</item>
        <item>Andhra Bank</item>
        <item>Bank of Baroda</item>
        <item>Bank of India</item>
        <item>Bank of Maharashtra</item>
        <item>Canara Bank</item>
        <item>Central Bank of India</item>
        <item>Corporation Bank</item>
        <item>Dena Bank</item>
        <item>Indian Bank</item>
        <item>Indian Overseas Bank</item>
        <item>Oriental Bank of Commerce</item>
        <item>Punjab &amp; Sind Bank</item>
        <item>Punjab National Bank</item>
        <item>Syndicate Bank</item>
        <item>UCO Bank</item>
        <item>Union Bank of India</item>
        <item>United Bank of India</item>
        <item>Vijaya Bank</item>
        <item>IDBI Bank</item>
        <item>Bharatiya Mahila Bank[2]</item>

    </string-array>
    <string name="sku_list_recycler_empty_view">No SKU Is Available</string>
    <string name="sku_list_bnt_cart">Add</string>
    <string name="sku_list_txt_bottle_quantity_hint">Bottles</string>
    <string name="sku_list_txt_case_quantity_hint">Cases</string>
    <string name="sku_list_btn_checkout_text">Check Out</string>
    <string-array name="array_item_uom">
        <item>EA</item>
        <item>Case / 24 </item>
        <item>Pack / 12 </item>
        <item>Box / 9 </item>
    </string-array>
    <string name="discount_list_recycler_empty_view">No Discount Is Available</string>
    <string name="order_summary_footer_button_confirm_order">Confirm Order</string>
    <string name="item_list_recycler_empty_view">No SKU Is Available</string>
    <string name="fragment_about_txt_copy_right">Copyright © 2016 Inventrax, All rights reserved.</string>
    <string name="fragment_about_txt_inventrax_link">www.inventrax.com</string>
    <string name="fragment_about_txt_version">Version :</string>
    <string name="fragment_about_txt_visit">Visit :</string>
    <string name="ChannelCode">Channel Code</string>
    <string name="LandMark">Land Mark</string>
    <string name="AccountType">Account Type</string>
    <string name="OutletName">Outlet Name</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="OutletCode">Outlet Code</string>
    <string name="OrderNumber">Order Number</string>
    <string name="OrderDate">Order Date</string>
    <string name="OrderValue">Order Value</string>
    <string name="BrandName">Brand Name</string>
    <string name="BrandPackName">Brand Pack Name</string>
    <string name="MRP">MRP</string>
    <string name="Add">Add</string>
    <string name="Discount">Discount</string>
    <string name="AvailableStock">Avl. Stock</string>
    <string name="OutletType">Outlet Type</string>
    <string name="DiscountInfo">Discount Info</string>
    <string name="RouteCode">Route Code </string>
    <string name="OwnerName">Owner Name</string>
    <string name="PaymentMode">Payment Mode</string>
    <string name="Cash">Cash</string>
    <string name="Cheque">Cheque</string>
    <string name="Receive">Receive</string>
    <string name="number_of_cases">No. of cases</string>
    <string name="number_of_bottles">No. of bottles</string>
    <string name="Cases">Cases</string>
    <string name="Bottles">Bottles</string>
    <string name="ChequeNumber">Cheque Number</string>
    <string name="TradePrice">Trade</string>
    <string name="DiscountCode">Discount Code</string>
    <string name="DiscountName">Discount Name</string>
    <string name="DiscountType">Discount Type</string>
    <string name="DiscountValue">Discount Value</string>
    <string name="TargetItem">Target Item</string>
    <string name="OfferItem">Offer Item</string>
    <string name="SchemeCode">Scheme Code</string>
    <string name="SchemeName">Scheme Name</string>
    <string name="SchemeDescription">Scheme Description</string>
    <string name="Validity">Validity</string>
    <string name="Address">Address</string>
    <string name="Quantity">Quantity</string>
    <string name="Scheme">Scheme</string>
    <string name="CustomerOperations">Outlet Operations</string>
    <string name="BookOrder">Book Order</string>
    <string name="OrderDetails">Order Details</string>
    <string name="Rs">\u20B9</string>
    <string name="Route">Route :</string>
    <string name="CheckIn">Check-In</string>
    <string name="Brand">Brand :</string>
    <string name="Pack">Pack :</string>
    <string name="Crates">Crates</string>
    <string name="InvoiceNumber">Invoice Number</string>
    <string name="StockDetails">Stock Details</string>
    <string name="OrderType">Order Type</string>
    <string name="OrderStatus">Order Status</string>
    <string name="Pleaseenterquantity">Please enter quantity</string>
    <string name="Receives">Receive Cash</string>
    <string name="Receivecheque">Receive Cheque</string>
    <string-array name="array_complaint_type">
        <item>Select Complaint Type</item>
        <item>Cooler Not Working</item>
        <item>Less Cooling</item>
        <item>Tubelight Not Working</item>
        <item>Rack Rusted</item>
        <item>No Front Cover</item>
        <item>Wheels Problem</item>
        <item>Cooler Decalls</item>
        <item>Glass Door Broken</item>
        <item>Door Seal Problem</item>
        <item>Cron Collector</item>
        <item>Cron Opener</item>
        <item>Door Handle</item>
        <item>Canopy Broken</item>
        <item>Body Rusted</item>
    </string-array>
    <string-array name="array_cooler_capacity">
        <item>Select Volume</item>
        
        <item>65L</item>
        <item>70L</item>
        <item>100L EBC</item>
        <item>110L</item>
        <item>120L</item>
        <item>125L EBC</item>
        <item>165L</item>
        <item>175L</item>
        <item>200L EBC</item>
        <item>220L</item>
        <item>280L</item>
        <item>320L</item>
        <item>350L</item>
        <item>400L</item>
        <item>425L</item>
        <item>450L</item>
        <item>550L</item>
        <item>600L</item>
        <item>650L</item>
        <item>1000L</item>

    </string-array>
    <string name="Outlet_Name">Outlet Name</string>
    <string name="outlet_code">Outlet Code</string>
    <string name="owner_name">Owner Name</string>
    <string name="land_mark">Landmark</string>
    <string name="Remarks">Remarks</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="ScanAssetSerialNumber">Scan Asset Serial Number</string>
    <string name="Yes">YES</string>
    <string name="NO">NO</string>
   <string name="MachineStatus">MachineStatus</string>
   <string name="Working">Working</string>
    <string name="NotWorking">NotWorking</string>
    <string name="Scrap">Scrap</string>
    <string name="PulloutReason">PulloutReason</string>
</resources>