<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cust_action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sync_order_info"
        android:title="Sync"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_sync"
        app:showAsAction="never"
        android:visible="false"
        >

    </item>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_menu_about"
        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_menu_settings"
        />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_menu_logout"
        />


    <item
        android:id="@+id/action_pack_spinner"
        android:title="@string/ic_action_pack_spinner"
        android:orderInCategory="100"
        android:visible="false"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_spinner"
        android:title="@string/ic_action_brand_spinner"
        android:orderInCategory="100"
        android:visible="false"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_cart"
        android:title="cart"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/action_language_spinner"
        android:title="@string/ic_action_lang_spinner"
        android:orderInCategory="100"
        android:visible="false"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="never"/>


</menu>