<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    card_view:cardCornerRadius="@dimen/_3sdp"
    card_view:cardUseCompatPadding="true"
    android:layout_marginTop="@dimen/_8sdp"
    android:layout_marginLeft="@dimen/_8sdp"
    android:layout_marginRight="@dimen/_8sdp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingTop="@dimen/_12sdp">

        <TextView
            android:id="@+id/txtOutletCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/OutletCode"
            android:textIsSelectable="true"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/txtOrderNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtOrderDate"
            android:layout_alignParentRight="true"
            android:text="@string/OrderNumber"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/color_in_process"
            />


        <TextView
            android:id="@+id/txtOrderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtOutletCode"
            android:layout_below="@+id/txtOutletCode"
            android:layout_marginTop="@dimen/_11sdp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/OrderDate"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/txtOrderValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtOrderDate"
            android:layout_alignBottom="@+id/txtOrderDate"
            android:layout_alignRight="@+id/txtOrderNumber"
            android:text="@string/OrderValue"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/txtOutletName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtOrderDate"
            android:layout_below="@+id/txtOrderDate"
            android:layout_marginTop="@dimen/_11sdp"
            android:text="@string/OutletName"
            android:textSize="@dimen/_12sdp" />

          <TextView
            android:id="@+id/txtOrderType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtOutletName"
            android:layout_alignBottom="@+id/txtOutletName"
            android:layout_alignRight="@+id/txtOrderValue"
            android:layout_marginTop="@dimen/_11sdp"
            android:text="@string/OrderType"
            android:textSize="@dimen/_12sdp"/>

        <TextView
            android:id="@+id/txtOrderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtOutletName"
            android:text="@string/OrderStatus"
            android:layout_marginTop="@dimen/_11sdp"
            android:textSize="@dimen/_12sdp"
            />



    </RelativeLayout>

</android.support.v7.widget.CardView>