<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    card_view:cardCornerRadius="@dimen/_3sdp"
    card_view:cardUseCompatPadding="true"
    android:layout_marginLeft="@dimen/_14sdp"
    android:layout_marginRight="@dimen/_14sdp"
    android:layout_marginTop="@dimen/_3sdp"
    android:layout_marginBottom="@dimen/_3sdp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_11sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingTop="@dimen/_11sdp">

        <TextView
            android:id="@+id/txtDiscountCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/DiscountCode"
            android:textIsSelectable="true"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/color_in_process"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDiscountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtOutletName"
            android:layout_alignParentRight="true"
            android:text="@string/DiscountName"
            android:textSize="@dimen/_13sdp" />


        <TextView
            android:id="@+id/txtDiscountType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtDiscountCode"
            android:layout_below="@+id/txtDiscountCode"
            android:layout_marginTop="@dimen/_11sdp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/DiscountType"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/txtDiscountValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtDiscountType"
            android:layout_alignBottom="@+id/txtDiscountType"
            android:layout_alignRight="@+id/txtDiscountName"
            android:text="@string/DiscountValue"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/txtTargetItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtDiscountType"
            android:layout_below="@+id/txtDiscountType"
            android:layout_marginTop="@dimen/_11sdp"
            android:text="@string/TargetItem"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/txtOfferItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTargetItem"
            android:layout_marginTop="@dimen/_11sdp"
            android:text="@string/OfferItem"
            android:textSize="@dimen/_13sdp"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>