<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="@dimen/_8sdp"
    android:layout_marginRight="@dimen/_8sdp"
    card_view:cardCornerRadius="@dimen/_3sdp"
    card_view:cardUseCompatPadding="true"
    android:layout_marginTop="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtOutletCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:text="@string/outlet_code"/>

            <TextView
                android:id="@+id/txtOutletName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_15sdp"
                android:text="@string/Outlet_Name"
                android:gravity="right"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_15sdp"
                android:text="@string/owner_name"/>

            <TextView
                android:id="@+id/txtChannelCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_15sdp"
                android:text="@string/ChannelCode"
                android:gravity="right"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtLandmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_15sdp"
                android:text="@string/land_mark"/>

            <TextView
                android:id="@+id/txtPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_15sdp"
                android:text="@string/PhoneNumber"
                android:gravity="right"
                />

        </LinearLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>

