<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:weightSum="5">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_serial_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/inputAssetSerialNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ScanAssetSerialNumber"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/btnScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="4"
                android:src="@drawable/ic_action_qr_code_red" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MachineStatus"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="@dimen/_13sdp"
                />

            <RadioGroup
                android:id="@+id/rbgMachineStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/_8sdp"
                >

                <RadioButton
                    android:id="@+id/rbWorking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Working"
                    android:checked="true"
                    />

                <RadioButton
                    android:id="@+id/rbNotWorking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NotWorking"
                    />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Scrap"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="@dimen/_13sdp"
                />

            <RadioGroup
                android:id="@+id/rbgScrap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/_8sdp">

                <RadioButton
                    android:id="@+id/rbScrapYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Yes"
                    />

                <RadioButton
                    android:id="@+id/rbScrapNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NO"
                    android:checked="true"
                    />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PulloutReason"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/_8sdp"
            />

        <Spinner
            android:id="@+id/spinnerPulloutReasons"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_height="wrap_content"
            android:entries="@array/array_asset_pullout_reasons"
            ></Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_pullout_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/inputReasonForPullout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Remarks"
                    android:maxLines="10"
                    />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Cancel"
                android:textAllCaps="false"
                android:background="@drawable/ic_action_submit_button_selector"
                android:textColor="@color/colorPrimary"
                />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Submit"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/_8sdp"
                android:background="@drawable/ic_action_submit_button_selector"
                android:textColor="@color/colorPrimary"
                />

        </LinearLayout>


        <TextView
            android:id="@+id/txtPulloutDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PulloutDetails"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            />


        <FrameLayout
            android:id="@+id/frmlAssetPulloutList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            >

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/tblAssetPullout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TableLayout>

            </HorizontalScrollView>

        </FrameLayout>


    </LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:src="@drawable/ic_action_return"
        />

</RelativeLayout>





